Run tsc on npm prepare so that installing from github works.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "clean": "rimraf ./dist",
     "prebuild": "npm run clean",
+    "prepare": "tsc",
     "build": "tsc",
     "watch": "tsc -w"
   },
